Split read me into two (one for github, one for project more generally)

--- a/Project_Description.qmd
+++ b/Project_Description.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Static Predictors - Read me"
+title: "Static Predictors - Project and Folder description"
 format:
   html:
     self-contained: true
